Fixed styling issue on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,24 +13,22 @@
  *= require_tree .
  *= require_self
  */
-
- * {
+* {
   font-size: 16px;
- }
+}
 
- .btn-group a {
-   color: #fafafa;
- }
+.btn-group a {
+  color: #fafafa;
+}
 
- body {
-   background-color: #fafafa;
-   color: #333;
-   font-family: verdana, arial, helvetica, sans-serif;
-   line-height: 18px;
- }
+body {
+  background-color: #fafafa;
+  color: #333;
+  font-family: verdana, arial, helvetica, sans-serif;
+  line-height: 18px;
+  padding-top: 3rem;
+}
 
- a {
-   color: #333333;
- }
-
- 
+a {
+  color: #333333;
+}
